2004-11-03 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* InvalidOperationException.cs: make the message more meaningful and
	real. Fixes bug #69055.

2004-10-27 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AppDomain.cs: backported fixes related to SetupInformation in HEAD.
	Closes bug #68859.
	* AppDomainSetup.cs: added copy constructor.

2004-10-24  Fawad Halim  <fawad@fawad.net>
	* Environment.cs: If an Environment variable value isn't found, leave
	the trailing % of the reference for further matches.
	Add text between end of current lookup window and next % match if we
	just got a match, or add all text to the end if there are no further %
	matches.
	This fixes bug #64995.

2004-10-19  Lluis Sanchez  <lluis@novell.com>

	* MarshalByRefObject.cs: Field _identity is not serializable.
	This fixes bug #68567.

2004-10-08  Zoltan Varga  <vargaz@freemail.hu>

	* Convert.cs (ToType): Throw an exception when converting null to a
	valuetype. Fixes #67780.

2004-10-08  Atsushi Enomoto  <atsushi@ximian.com>

	* DateTime.cs : Removed incorrectly injected HEAD fix.

2004-10-08  Atsushi Enomoto  <atsushi@ximian.com>

	* DateTime.cs : When it it not exact parse, 'Z' is allowed as a suffix
	  of m/s/t/z. This fixes bug 66723.

2004-10-04  Zoltan Varga  <vargaz@freemail.hu>

	* AppDomain.cs: Make ThreadStatic variables static. Fixes #56614.

2004-09-30  Geoff Norton  <gnorton@customerdna.com>

        * Convert.cs: ConvertToBase* was not endian aware.  Implemented EndianSwap
        and swapping of all values before going into the BitConverter so that values
        are returned with proper endianess.

2004-09-23  Martin Garton  <martin@wrasse.demon.co.uk>
	
	* Convert.cs: ToType was returning unconverted object when it should
	fail with an ArgumentException.

2004-09-19  Dick Porter  <dick@ximian.com>

	* Console.cs: Use the internal wrappers for StreamReader and
	StreamWriter that catch IOException.

2004-08-29 Ben Maurer  <bmaurer@users.sourceforge.net>
